syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.mart";
option java_outer_classname = "MartProto";
option objc_class_prefix = "MS";

package mart;

service Mart {
    rpc Check (CheckRequest) returns (CheckResponse) {
    }

    rpc GetSensorsData (SensorsDataRequest) returns (SensorDataList) {
    }

    rpc ChangeClimate (ClimateActionList) returns (ClimateActionResponseList) {
    }
}

// Common check
message CheckRequest {
    string id = 1;
}

message CheckResponse {
    string id = 1;
    CheckState state = 2;
    string report = 3;
}

enum CheckState {
    C_OK = 0;
    C_ERROR = 1;
    C_WARNING = 2;
}

// Sensors data
message SensorsDataRequest {
    string id = 1;
    repeated string group = 2;
}

message SensorDataList {
    string id = 1;
    repeated SensorData data = 2;
}

message SensorData {
    string group = 1;
    string report = 2;
}

// Climate actions
message ClimateActionList {
    string id = 1;
    repeated ClimateAction action = 2;
}

message ClimateAction {
    string group = 1;
    string command = 2;
}

message ClimateActionResponseList {
    string id = 1;
    repeated ClimateActionResponse actionResponse = 2;
}

message ClimateActionResponse {
    string group = 1;
    ClimateActionState state = 2;
}

enum ClimateActionState {
    CA_OK = 0;
    CA_ERROR = 1;
    CA_WARNING = 2;
}